@@ -26,6 +26,9 @@ dpkg (1.14.13) UNRELEASED; urgency=low
     -lm. Closes: #454616
   * Included files in symbols files (via #include) do no more need to repeat
     the header line. Closes: #455260
+  * Tweak the sort algorithm between dependencies so that intervals
+    are displayed as "a (>= 1), a (<< 2)" instead of the opposite.
+    Closes: #455520
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
