@@ -1,3 +1,11 @@
+2007-12-11  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Deps.pm: Add a compare function that compares
+	dependencies more intelligently than a comparison on their
+	string representation. In particular we want >= and >> to sort
+	lower than << and <= so that intervals are nicely displayed
+	as "a (>= 1), a (<< 2)" instead of the ugly "a (<< 2), a (>= 1)".
+
 2007-12-10  Raphael Hertzog  <hertzog@debian.org>
 
 	* README.translators: Explain how to format Git commit messages.
